@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4ParallelTransport.cc,v 1.3 2002-05-02 08:43:24 dressel Exp $
+// $Id: G4ParallelTransport.cc,v 1.4 2002-05-31 13:49:47 dressel Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // ----------------------------------------------------------------------
@@ -66,16 +66,6 @@ PostStepGetPhysicalInteractionLength(const G4Track& aTrack,
 				     G4double   previousStepSize,
 				     G4ForceCondition* condition)
 {
-  if (aTrack.GetCurrentStepNumber()!=1 &&  previousStepSize==0. &&
-      ! fInitStep) {
-    G4String m = "GPIL CurrentStepNumber() = ";
-    m += str(aTrack.GetCurrentStepNumber()); 
-    m += " &&  previousStepSize==0\n";
-    m +=  "pos: " + str(aTrack.GetPosition()); 
-    m +=  ", dir: " + str(aTrack.GetMomentumDirection());
-    Warning(m);
-  }
-
   G4double stepLength;
 
   // if this function is called on a new track let the navigator 
